# rpa-watcher

./: .gitignore  Build.cmd  Cargo.toml  LICENSE  NewServer.md  NewWebsite.md  PowerAutomateAPI.md  ProcessRobotDB.md  README.md  myscript.nu  resr.txt
.github/workflows/: rust.yml
client/: Cargo.toml  build.rs  settings.ini
client/assets/: manifest.xml
client/src/: dbg.rs  env.rs  handles.rs  http.rs  main.rs  notification.rs  parser.rs  privilage.rs  process.rs  shared_mem.rs
rpa-lib/: Cargo.toml
rpa-lib/src/: lib.rs  rpa.rs
server/: Cargo.toml
server/src/: api.rs  config.rs  db.rs  main.rs  pa_api.rs  rpa_state.rs  state.rs  view.rs
sharedef/: Cargo.toml
sharedef/src/: lib.rs  rpa.rs
wwwroot/: 404.html  redirect.html
wwwroot/view/: index.html  script.js  style.css
wwwroot/view/v2/: index.html  script.js  style.css
