[package]
name = "rpa-watcher"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# curl = "0.4.44"
ureq = { version = "2.9.6", features = ["json", "charset"] }
serde = "1.0.197"
serde_json = "1.0.116"
rpa = { path = "../rpa-lib" }
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Threading",
    "Wdk_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Globalization",
] }

[target.'cfg(windows)'.build-dependencies]
windows_exe_info = { version = "0.4.2", features = [
    "embed_resource",
    "manifest",
] }
