[package]
name = "rpa-watcher"
version = "0.2.5"
edition = "2021"

[features]
default = []
windows = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpa-watcher"
path = "src/main.rs"
features = []

[[bin]]
name = "rpa-watcherw"
path = "src/main.rs"
required-features = ["windows"]

[dependencies]
# curl = "0.4.44"
ureq = { version = "3.0.12", features = ["json", "charset"] }
serde = "1.0.219"
serde_json = "1.0.140"
rpa = { path = "../rpa-lib" }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Threading",
    "Wdk_System_Threading",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
windows_exe_info = { version = "0.5.2", features = [
    "embed_resource",
    "manifest",
] }
