[package]
name = "rpa"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
