[package]
name = "rpa-watcher-srv"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
serde = "1.0.197"
serde_json = "1.0.114"
rpa = { path = "../rpa-lib" }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tiberius = { version = "0.12.2", features = ["tokio", "sql-browser-tokio"] }
reqwest = { version = "0.11.26", features = ["json"] }
anyhow = "1.0.81"
