[package]
name = "rpa-watcher-srv"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4" }
serde = "1.0.219"
serde_json = "1.0.140"
rpa = { path = "../rpa-lib" }
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tiberius = { version = "0.12.3", features = ["tokio", "sql-browser-tokio"] }
reqwest = { version = "0.12.22", features = ["json"] }
anyhow = "1.0.98"
tokio-stream = "0.1.17"
